# myrepo

./: CMakeLists.txt  Dvikov_Daniil_lb1.docx  Dvikov_Daniil_lb3_OOP.docx  main.cpp  player.cpp  playercontroller.cpp  playercontroller.hpp  Диаграмма без названия.drawio
ASSEMBLER/lab1/: 2381_OrgEVMIS_Dvikov_Daniil_LR1.docx  ~$81_OrgEVMIS_Dvikov_Daniil_LR1.docx
ASSEMBLER/lab1/src/: HELLO1.ASM  HELLO1.LST  HELLO1.MAP  HELLO2.ASM  HELLO2.LST  HELLO2.MAP
OOP/lab1/: main.cpp
OOP/lab1/player/: player.cpp  player.h
OOP/myself/OOP/lab1/: main.cpp  player.cpp  player.h  playercontroller.cpp  playercontroller.h
lab1/: cell.cpp  cell.hpp  gamefield.cpp  gamefield.hpp  lb1_oop.docx  main.cpp  player.cpp  player.h  player.hpp  playercontroller.cpp  playercontroller.h  playercontroller.hpp  Диаграмма без названия.drawio
lab1_alg/src/: 1zad.py  main.py  tests.py
lab3/: Dvikov_Daniil_lb3_OOP.docx  main.cpp  player.cpp  player.hpp  playercontroller.cpp  playercontroller.hpp
lab3/Field/: PrintField.cpp  PrintField.hpp  cell.cpp  gamefield.cpp  gamefield.hpp
lab3/Game/: Game.hpp  Input.hpp
lab3/events/: HealEvent.hpp  PlayerEvent.hpp  Score.hpp  Teleport.cpp  Win.hpp
lab4/: CMakeLists.txt  Dvikov_Daniil_lb4_OOP.docx  command.txt  main.cpp  player.hpp  playercontroller.cpp  playercontroller.hpp  ~$ikov_Daniil_lb4_OOP.docx
lab4/Field/: gamefield.cpp
lab4/Game/: Game.cpp  Input.cpp
lab4/events/: Enemy.cpp  FieldEvent.hpp  Lose.cpp  Lose.hpp  Score.cpp  Teleport.hpp  Win.cpp
lab5/: 4lab.drawio  CMakeLists.txt  Dvikov_Daniil_lb4_OOP.docx  Dvikov_Daniil_lb5_OOP.docx  command.txt  main.cpp  playercontroller.cpp  playercontroller.hpp  ~$ikov_Daniil_lb5_OOP.docx
lab5/Field/: FieldBuilder.cpp  FieldBuilder.hpp  cell.hpp  gamefield.cpp  gamefield.hpp
lab5/Game/: Game.cpp  Game.hpp  Input.hpp
lab5/View/: ConsoleView.cpp  ConsoleView.hpp  GameObserver.cpp  GameObserver.hpp  IObservable.hpp  IObserver.hpp  IView.hpp
lab5/events/: Enemy.hpp  Event.hpp  FieldEvent.cpp  HealEvent.cpp  Teleport.cpp
lab6/: CMakeLists.txt  Dvikov_Daniil_lb6_OOP.docx  Makefile  commands.txt  game  main.cpp  ~$ikov_Daniil_lb6_OOP.docx
lab6/Control/: Controller.cpp  Controller.h
lab6/Events/: Coin.cpp  Coin.h  Enemy.cpp  Enemy.h  Event.h  FieldEvent.cpp  FieldEvent.h  Heal.cpp  Heal.h  PlayerEvent.cpp  PlayerEvent.h  Teleport.cpp  Teleport.h
lab6/Field/: Cell.cpp  Cell.h  Field.cpp  Field.h  FieldBuilder.cpp  FieldBuilder.h  ShowField.cpp  ShowField.h
lab6/GameExecution/: ConsoleCmdR.cpp  GameManager.cpp  GameManager.h  ReadFile.cpp  ReadFile.h
lab6/Games/: ConsoleCmdR.h  GameManager.cpp  GameManager.h  ReadFile.cpp
lab6/Logging/: GameStarted.cpp  GameStarted.h  InvalidCommandPressed.cpp  InvalidCommandPressed.h  Message.cpp  Message.h  MessageHandler.cpp  MessageHandler.h  PlayerLost.cpp  PlayerLost.h  PlayerWon.cpp  PlayerWon.h  ValidCommandPressed.cpp  ValidCommandPressed.h
lab6/Observer/: MonitorGameState.cpp  MonitorGameState.h  Observer.cpp  Observer.h
lab6/Player/: Player.cpp  Player.h
lab6/View/: Monitor.h  MonitorCoordinates.cpp  MonitorCoordinates.h  MonitorGameState.h  MonitorStats.cpp  MonitorStats.h
mathdis/: a.out  backend.cpp
mathdis/html/: index.html
myself/OOP/lab1/: main.cpp
myself/OOP/lab1/controller/: playercontroller.cpp  playercontroller.h
myself/OOP/lab1/player/: player.cpp  player.h
хуета/: lb1_oop.docx
